--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-/bin/
+# --------------------------------
+# Mac OS
+.DS_Store
+.project
+
+# --------------------------------
+# Eclipse
+.settings/
+.classpath
+.project
+
+# Gradle
+.gradle
+build
+bin
+data
