Aumentando o timeout do gateway para 60s, de modo a evitar problemas como o do upload de documento.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,9 @@ eureka:
   instance:
     preferIpAddress: false
     hostname: gateway
+
+# Aumentando o timeout do gateway
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
