--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
+    healthcheck:
+      enabled: true      
   instance:
     preferIpAddress: false
     hostname: gateway
