--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8765
-  
+  ssl:
+    key-store: ssl/docker/server.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: docker
+
 spring:
   application:
     name: gateway
