--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,12 @@ eureka:
     non-secure-port-enabled: false
     secure-port-enabled: true
     secure-port: ${server.port}
+    
+zuul:
+  routes:
+    discovery:
+      url: http://discovery:8761
+      
 
 # Aumentando o timeout do gateway
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
