--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,18 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-zuul')
 }
 
+import org.gradle.plugins.ide.eclipse.model.SourceFolder 
+eclipse.classpath.file {
+    beforeMerged { classpath -> 
+        classpath.entries.clear()
+    }
+    whenMerged {  cp -> 
+        cp.entries.findAll { it instanceof SourceFolder && it.path.startsWith("src/main/") }*.output = "bin/main" 
+        cp.entries.findAll { it instanceof SourceFolder && it.path.startsWith("src/test/") }*.output = "bin/test" 
+        cp.entries.removeAll { it.kind == "output" }
+    }
+}
+
 import de.undercouch.gradle.tasks.download.Download
 
 task downloadSwaggerZipFile(type: Download) {
