--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
-ADD gateway.jar app.jar
+ADD app-lib-layer/lib/ /app/lib/
+ADD app-layer/ /app/
 ADD server.p12 ssl/docker/server.p12
 COPY docker-entrypoint.sh /docker-entrypoint.sh
-RUN sh -c 'touch /app.jar'
 ENTRYPOINT ["/docker-entrypoint.sh"]
