--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 sudo: required
-
 language: java
 jdk:
   - oraclejdk8
-
 services:
   - docker
-
-install: true
+addons:
+  hosts:
+    - docker
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - docker save -o $HOME/docker_cache/docker.tar stfdigital-plataforma-gateway $(docker history -q stfdigital-plataforma-gateway | tail -n +2 | grep -v \<missing\> | tr '\n' ' ')
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/docker_cache
+before_install:
+  - ./scripts/upgrade-docker.sh
+  - mkdir -p $HOME/docker_cache
+install: docker load -i $HOME/docker_cache/docker.tar || true
 script: gradle docker
