Incluindo plugins gradle do sonar e jacoco.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 dockerImageName=stfdigital-plataforma-gateway
+
+systemProp.sonar.host.url=http://docker:9000
+systemProp.sonar.projectKey=stfdigital-plataforma-gateway
+systemProp.sonar.projectName=STF Digital - Plataforma - Gateway
+systemProp.sonar.projectVersion=0.0.1-SNAPSHOT
