--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPlugin}")
         classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.8.0")
         classpath('de.undercouch:gradle-download-task:2.1.0')
+        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1")
     }
 }
 
@@ -33,6 +34,10 @@ apply plugin: 'java'
 apply plugin: "com.palantir.docker"
 
 apply plugin: 'de.undercouch.download'
+
+apply plugin: 'jacoco'
+
+apply plugin: 'org.sonarqube'
 
 repositories {
     mavenLocal()
@@ -78,6 +83,11 @@ eclipse.classpath.file {
         cp.entries.findAll { it instanceof SourceFolder && it.path.startsWith("src/test/") }*.output = "bin/test" 
         cp.entries.removeAll { it.kind == "output" }
     }
+}
+
+// Cobertura de testes
+jacoco {
+    toolVersion = '0.7.7.201606060606'
 }
 
 import de.undercouch.gradle.tasks.download.Download
