--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.5.RELEASE'
-        springPlatformVersion = '2.0.5.RELEASE'
-        dependencyManagementPlugin = '0.5.2.RELEASE'
-        springCloudVersion = '1.1.0.RELEASE'
+        springBootVersion = '1.4.0.RC1'
+        dependencyManagementPlugin = '0.6.0.RELEASE'
+        gradleDockerPluginVersion = '0.8.0'
+        sonarqubeGradlePluginVersion = '2.0.1'
+        springCloudReleaseTrainVersion = 'Brixton.SR3'
         swaggerUiVersion = '2.1.4'
     }
     repositories {
@@ -11,13 +12,14 @@ buildscript {
         mavenCentral()
         maven { url "http://repo.spring.io/release" }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://repo.spring.io/libs-milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPlugin}")
-        classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.8.0")
+        classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:${gradleDockerPluginVersion}")
+        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:${sonarqubeGradlePluginVersion}")
         classpath('de.undercouch:gradle-download-task:2.1.0')
-        classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1")
     }
 }
 
@@ -42,14 +44,13 @@ apply plugin: 'org.sonarqube'
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url "https://repo.spring.io/libs-milestone" }
 }
 
 dependencyManagement {
     imports {
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudReleaseTrainVersion}")
         mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
-        mavenBom("org.springframework.cloud:spring-cloud-netflix:${springCloudVersion}")
-        mavenBom("org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE")
-        mavenBom("io.spring.platform:platform-bom:${springPlatformVersion}")
     }
 }
 
@@ -122,14 +123,16 @@ dockerPrepare {
         // Layer Docker com as libs externas, atualizadas com menos frequência e por isso estarão em uma layer abaixo das outras
         copy {
             from(zipTree(file(dockerAppJarFile))) {
-                include 'lib/**'
+                include 'BOOT-INF/lib/**'
+                include 'org/**'
             }
             into dockerDir + '/app-lib-layer'
         }
         // Layer Docker da aplicação em si, conterá um Jar pequeno, o que permite otimizar o pull da imagem do registro.
         copy {
             from(zipTree(file(dockerAppJarFile))) {
-                exclude 'lib/**'
+                exclude 'BOOT-INF/lib/**'
+                exclude 'org/**'
             }
             into dockerDir + '/app-layer'
         }
@@ -140,6 +143,6 @@ dockerPrepare {
 docker {
     name dockerImageName + (dockerImageTag ? ':' + dockerImageTag : '')
     dockerfile 'src/main/docker/Dockerfile'
-	files 'src/main/docker/docker-entrypoint.sh', 'ssl/docker/server.p12'
+    files 'src/main/docker/docker-entrypoint.sh', 'ssl/docker/server.p12'
     dependsOn tasks.jar, tasks.bootRepackage, tasks.build
 }
