--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
-        springBootVersion = '1.4.0.RC1'
+        springBootVersion = '1.4.0.RELEASE'
         dependencyManagementPlugin = '0.6.0.RELEASE'
         gradleDockerPluginVersion = '0.8.0'
         sonarqubeGradlePluginVersion = '2.0.1'
-        springCloudReleaseTrainVersion = 'Brixton.SR3'
+        springCloudReleaseTrainVersion = 'Brixton.SR4'
         swaggerUiVersion = '2.1.4'
     }
     repositories {
