--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,9 @@ dependencies {
     }
     
     compile("org.springframework.boot:spring-boot-starter-undertow")
-    
+
+    compile("org.springframework.cloud:spring-cloud-starter-config")
+
     compile("org.springframework.security.oauth:spring-security-oauth2")
     compile("org.springframework.cloud:spring-cloud-starter-oauth2")
     compile("org.springframework.boot:spring-boot-starter-security")
